added the inverted file code for input/output